All classes completed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(assignment2)
-
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(..)
-
+include_directories(./)
+file(COPY words.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY madLibs1.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 add_executable(main main.cpp MadLibsController.cpp MadlibUserWordProvider.cpp MadlibAutoWordProvider.cpp)
